--- a/doc-V2V_Guide/cfme/doc/asm_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Planning.adoc
@@ -5,9 +5,9 @@ A well-planned migration is critical for success. TBD
 
 The planning process has x key stages:
 
-* Create playbooks for pre- and post-migration tasks
-* Create migration groups
-* Create a schedule
+* Create playbooks for pre- and post-migration tasks.
+* Create migration groups.
+* Create a schedule.
 
 === Creating Playbooks for Pre- and Post-migration Tasks
 
