--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
@@ -3,8 +3,9 @@
 
 Authenticate the Manager so that CloudForms can connect to it:
 
-. Select the *Zone* for the provider.
-. In the *Credentials* area, under *Default*, enter the user name (formatted as `admin@internal`) in the *Username* field.
+. Go to menu:Compute[Infrastructure > Providers].
+. Select the *Zone* for the provider. *(%AP: This was not selectable when I tried)*
+. In the *Credentials* area, under *Default*, enter the user name (formatted as `admin@internal`) in the *Username* field. *(%AP: Login for test environment succeeded only when certificate check was disabled. OK to assume that certificate check should be enabled in production?)*
 . Enter the password in the *Password* field.
 . Confirm the password in the *Confirm Password* field.
 . Click *Validate*.
@@ -13,7 +14,7 @@ Authenticate the Manager so that CloudForms can connect to it:
 After authenticating the Manager, authenticate its hosts, using the administrator credentials:
 
 . Go to menu:Compute[Infrastructure > Providers].
-. Click on a provider to display its summary screen.
+. Click a provider to display its summary screen.
 . On the summary screen, click *Hosts* in the *Relationships* information box to display the hosts on that provider.
 . Select the hosts to authenticate.
 +
