--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_CloudForms.adoc
@@ -59,6 +59,7 @@ A progress bar indicates the status of the upload. You can pause, cancel, or res
 After you have uploaded the CloudForms appliance to your data storage domain, you import the appliance image as a template and create a virtual machine based on this template:
 
 *(%AP: This needs to be clarified because no template import tab for data domain. Question sent to Dave Johnson. First version is from VMM, second is from CF install guide.)*
+*(%AP: Update: After uploading CF image to storage domain, it's possible to create a new VM and attach CF image as disk. Console shows that VM starts up RHEL7.5 and appliance_console message is displayed. Is this an acceptable workaround?)*
 
 *VMM version*
 
