--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
@@ -3,11 +3,11 @@
 
 The procedure for installing Red Hat Virtualization Manager has 5 key stages:
 
-* Ensure that your system meets the prerequisites
-* Enable the Manager repositories
-* Install the Manager packages
-* Configure the Manager
-* Connect to the Administration Portal
+* Ensure that your system meets the prerequisites.
+* Enable the Manager repositories.
+* Install the Manager packages.
+* Configure the Manager.
+* Connect to the Administration Portal.
 
 [NOTE]
 ====
