--- a/doc-V2V_Guide/cfme/doc/asm_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Discovery.adoc
@@ -12,9 +12,9 @@ The discovery stage is critical for planning your migration. It will help you to
 
 The discovery procedure has 3 key stages:
 
-* Discover the VMware and Red Hat Virtualization infrastructure providers
-* Authenticate Red Hat Virtualization Manager and hosts
-* Authenticate VMware vCenter and hosts
+* Discover the VMware and Red Hat Virtualization infrastructure providers.
+* Authenticate Red Hat Virtualization Manager and hosts.
+* Authenticate VMware vCenter and hosts.
 
 include::modules/proc_Discovering_infrastructure_providers.adoc[]
 include::modules/proc_Authenticating_RHV_Manager_and_hosts.adoc[]
