Few edits for better flow and readability.

--- a/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_an_Orchestration_Catalog_Item.adoc
+++ b/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_an_Orchestration_Catalog_Item.adoc
@@ -1,7 +1,7 @@
 [[example-adding-orchestration-catalog-item]]
 == Creating an Orchestration Catalog Item
 
-Complete the following procedure to create a new orchestration catalog item.
+Complete the following procedure to create a new catalog item from the orchestration template.
 
 . Navigate to menu:Services[Catalogs] and select *Catalog Items* in the accordion menu.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Add a New Catalog Item*. 
@@ -11,5 +11,8 @@ Complete the following procedure to create a new orchestration catalog item.
 .. Select *Display in Catalog* box.
 .. Select the appropriate catalog from the *Catalog* list.
 .. Select the appropriate dialog from the *Dialog* list.
-.. Select the orchestration template from the *Orchestration Template* list.
+.. Select the orchestration template you created in xref:example-adding-orchestration-template[] from the *Orchestration Template* list.
+.. Select *Amazon* from the *Provider* list.
 . Click *Add*.
+
+Next, you can now add the template you created in xref:example-adding-orchestration-template[] as a catalog item, and assign it to a new service catalog.
