--- a/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_a_Catalog.adoc
+++ b/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_a_Catalog.adoc
@@ -1,10 +1,12 @@
 [[example-adding-a-new-catalog]]
 == Creating a Catalog
 
-Complete the following procedure to create a new catalog.
+Complete the following procedure to create a new catalog, and assign catalog items to it.
 
 . Navigate to menu:Services[Catalogs] and select *Catalogs* in the accordion menu.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Add a New Catalog*. 
 . In *Basic Info*, add *Name* and *Description* for the new catalog.
-. You can assign catalog items in *Assign Catalog Item*.
+. Under *Assign Catalog Items*, select the catalog items that you created in xref:example-adding-orchestration-catalog-item[] from the *Unassigned* box, then move it to the *Selected* box.
 . Click *Add*.
+
+
