--- a/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_an_Orchestration_Template.adoc
+++ b/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_an_Orchestration_Template.adoc
@@ -1,7 +1,7 @@
 [[example-adding-orchestration-template]]
 == Creating an Orchestration Template
 
-Complete the following procedure to add new orchestration templates. 
+Complete the following procedure to create a new orchestration template. 
 
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Create a new Orchestration Template*. 
@@ -11,4 +11,4 @@ Complete the following procedure to add new orchestration templates.
 . Add your template in the area below for the selected *Template Type*. You can author your own stack template, or you can copy and paste from an existing text file.
 . Click *Add*.
 
-You can add this template as a catalog item to a service catalog. Stacks can then be created from templates and launched from the service catalog using a service dialog.
+Next, create a service dialog from the orchestration template. 
