--- a/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Ordering_Service.adoc
+++ b/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Ordering_Service.adoc
@@ -1,15 +1,14 @@
 [[example-ordering-service]]
 == Ordering a Service
 
-Complete the following procedure to order your catalog item from the service catalog.
+Complete the following procedure to order catalog items from the service catalog.
 
 . Navigate to menu:Services[Catalogs] and select *Service Catalogs* in the accordion menu. 
-. Expand *All Services*, then click the catalog item you want to order from the service catalog.
-. Click *Order*. You will see the *Order Service* window with *Options* and *Parameters*.
-. Enter the name of the stack in *Stack Name*.
-. Select the value of *On Failure* if stack creation fails. The default is *Rollback*.
-. Optionally, enter *Timeout* in minutes.
-. Set the remaining parameters as needed that will vary depending on the dialog. 
+. From *All Services*, select the catalog and the services (catalog items) that you want to order from your catalog, then click *Order*. You will see the *Order Service* window with *Options* and *Parameters*.
+. Enter a name for the stack in *Stack Name*.
+. From the *On Failure* list, select what to do if stack creation fails. The default is *Rollback*.
+. Optional: Enter *Timeout* in minutes.
+. Set the remaining options as needed that will vary depending on the dialog. 
 . Click *Submit*.
 
-The provisioning service request is submitted. Once a request has been approved, the various stages of fulfillment will be processed. You can monitor the request status and other details in menu:Services[Requests].
+You have now submitted your service provisioning request. Once a request has been approved, the various stages of fulfillment will be processed. You can monitor the request status and other details in menu:Services[Requests].
