--- a/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
@@ -3,7 +3,7 @@
 
 [NOTE]
 ====
-This feature is currently available as a technology preview only. For more information on the support scope for features marked as technology previews, see https://access.redhat.com/support/offerings/techpreview[Technology Preview Features Support Scope].
+This feature is currently available as a technology preview only. For more information on the support scope for features marked as technology preview, see https://access.redhat.com/support/offerings/techpreview[Technology Preview Features Support Scope].
 ====
 
 Prometheus is used as an external alerting component. {product-title_short} integrates Prometheus alerts for use with OpenShift Container Platform. {product-title_short} collects events from Prometheus, generates alerts based on these events, and then attaches alerts to inventory objects.
@@ -13,6 +13,11 @@ It is possible to view ongoing alerts in {product-title_short} by navigating to 
 * View active alerts per provider in the *Overview* screen.
 * View alert data and related objects.
 * Comment, assign, and acknowledge alerts in the *All Alerts* screen.
+
+[IMPORTANT]
+====
+Network utilization metrics for OpenShift Container Platform are only collected for `eth0` network interfaces. Therefore, network utilization trend will not be displayed for network interfaces other than `eth0` on the overview screen of the provider. 
+====
 
 === Configuring Prometheus Alerts in {product-title_short}
 
