--- a/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_an_Orchestration_Catalog_Item.adoc
+++ b/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_an_Orchestration_Catalog_Item.adoc
@@ -1,7 +1,7 @@
 [[example-adding-orchestration-catalog-item]]
 == Creating an Orchestration Catalog Item
 
-Complete the following procedure to create a new catalog item from the orchestration template.
+Complete the following procedure to create a new catalog item from the orchestration template you created in xref:example-adding-orchestration-template[].
 
 . Navigate to menu:Services[Catalogs] and select *Catalog Items* in the accordion menu.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Add a New Catalog Item*. 
@@ -15,4 +15,4 @@ Complete the following procedure to create a new catalog item from the orchestra
 .. Select *Amazon* from the *Provider* list.
 . Click *Add*.
 
-Next, you can now add the template you created in xref:example-adding-orchestration-template[] as a catalog item, and assign it to a new service catalog.
+Next, assign the catalog item to a new service catalog.
