--- a/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_a_Service_Dialog_from_an_Orchestration_Template.adoc
+++ b/art-Service_Provisioning_Using_an_Orchestration_Template/topics/Creating_a_Service_Dialog_from_an_Orchestration_Template.adoc
@@ -4,7 +4,7 @@
 Complete the following procedure to create a service dialog based on the input parameters defined in the orchestration template.
 
 . Navigate to menu:Services[Catalogs] and click *Orchestration Templates* in the accordion menu.
-. Expand *All Orchestration Templates*, then click the orchestration template you created using the above procedure, that you want to create a service dialog from.
+. Expand *All Orchestration Templates*, then click the orchestration template you created in xref:example-adding-orchestration-template[] to create a service dialog from it.
 . Click image:1847.png[Configuration]*Configuration*, then click image:1848.png[Green_Plus_Sign]*Create Service Dialog from Orchestration Template*.
 . Enter a name for the service dialog in *Service Dialog Name*.
 . Click *Save*.
