Add RHV credentials detail

--- a/doc-Managing_Providers/topics/Ansible_Credentials.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Credentials.adoc
@@ -117,6 +117,22 @@ Rackspace credentials have the following attributes that may be configured:
 * *Username*: The username to use to connect to vCenter.
 * *API Key*: The public key related to the administrator ID. 
 
+
+=== Red Hat Virtualization
+Selecting this credential type enables synchronization of cloud inventory with Red Hat Virtualization.
+
+Red Hat Virtualization credentials have several attributes that may be configured:
+
+* *Username*: The username to use to connect to Red Hat Virtualization.
+* *Password*: The password to use to connect to Red Hat Virtualization.
+* *Host (Authentication URL)*: The host to be used for authentication.
++
+[IMPORTANT]
+====
+* Enter in *Host* the Red Hat Virtualization provider URL, followed by the path `/ovirt_engine/api`. Example: `https://your.rhv.com/ovirt_engine/api`  
+* See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1/html/administration_guide/chap-automating_rhv_configuration_using_ansible#Ansible_Roles[Ansible Roles] for more information on Ansible Roles available for Red Hat Virtualization.
+====
+
 === Satellite 6
 Selecting this credential type enables synchronization of cloud inventory with Red Hat Satellite 6.
 
